--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">TECHNOLOGICAL BACCALAUREATE</h5>
+                            <p class="mb-2"><strong>Puig Castellar</strong> | <small>2020 - 2022</small></p>
+                            <p>I study math, science, and language arts, along with technical courses in IT, electronics, and engineering, preparing me for higher education and technical careers.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
+                            <h5 class="font-weight-bold mb-1">HIGHER DEGREE IN CYBERSECURITY (ASIR)</h5>
                             <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
                             <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                         </div>
