--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Crew Member</h5>
-                            <p class="mb-2"><strong>Taco Bell</strong> | <small>2000 - 2050</small></p>
+                            <p class="mb-2"><strong>Taco Bell</strong> | <small>2022 - 2023</small></p>
                             <p>Food higiene and preparation, kitchen managing</p>
                         </div>
                     </div>
@@ -555,7 +555,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Domain Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Younes Derraz</a>. All Rights Reserved.</a>
             </p>
         </div>
     </div>
