--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     <!-- Testimonial End -->
 
 
-    <!-- Blog Start -->
+    <!-- Blog Start 
     <div class="container-fluid pt-5" id="blog">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -486,7 +486,7 @@
             </div>
         </div>
     </div>
-    <!-- Blog End -->
+    Blog End -->
 
 
     <!-- Contact Start -->
