--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#">x.com/y0n6s_d3rr4z<i class="fab fa-twitter"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="x.com/y0n6s_d3rr4z"><i class="fab fa-twitter"></i></a>
                 <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                <a class="btn btn-light btn-social mr-2" href="#">linkedin.com/in/younes-derraz<i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#">instagram.com/yns.drrz<i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="linkedin.com/in/younes-derraz"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social" href="instagram.com/yns.drrz"><i class="fab fa-instagram"></i></a>
             </div>
             <!--
             <div class="d-flex justify-content-center mb-3">
