--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Barcelona, Spain</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Not available</span></h6></div>
                     </div>
-                    <a href="mailto:younesderraz123@gmail.com" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="mailto:younesderraz123@gmail.com" class="btn btn-outline-primary mr-4">Mail Me</a>
                 </div>
             </div>
         </div>
@@ -257,12 +257,12 @@
     <!-- Skill End -->
 
 
-    <!-- Services Start -->
+    <!-- Projects Start -->
     <div class="container-fluid pt-5" id="service">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Service</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Services</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Project</h1>
+                <h1 class="position-absolute text-uppercase text-primary">My Projects</h1>
             </div>
             <div class="row pb-3">
                 <div class="col-lg-4 col-md-6 text-center mb-5">
@@ -270,8 +270,8 @@
                         <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>This was a 3 weeks project with two other collegues to create a responsive webpage that contains basic school tools, we used <b>HTML</b>, <b>CSS</b> and <b>JS</b></p>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt1-ElHarrakSoulaimane-SendraAlfredo-DerrazYounes-asixc1A/about/">Visit it</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
