--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Web Design</h4>
+                        <h4 class="font-weight-bold m-0">Project Lex</h4>
                     </div>
                     <p>This was a 3 weeks project with two other collegues to create a responsive webpage that contains basic school tools, we used <b>HTML</b>, <b>CSS</b> and <b>JS</b></p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt1-ElHarrakSoulaimane-SendraAlfredo-DerrazYounes-asixc1A/about/">Visit it</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt1-ElHarrakSoulaimane-SendraAlfredo-DerrazYounes-asixc1A/">Visit it</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
