--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <h4 class="font-weight-bold m-0">Delicias Kitchen</h4>
                     </div>
                     <p>In this project we learned to use XML forms, in addition with HTML and CSS. This was one of my initial projects</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Visit it</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt3_ElHarrak_Soulaimane_Derraz_Younes/">Visit it</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -323,16 +323,16 @@
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Certifications</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">My Portfolio</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Certifications</h1>
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Trading</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Cybersecurity</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Healthcare</li>
                     </ul>
                 </div>
             </div>
@@ -415,10 +415,10 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4">Younes is one of the most hardworking people that I know, I've seen him all day log nonstop working on different things, he has a purpose and he's going for it.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0">Hamza D.</h5>
+                            <span>Influencer</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
