--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Younes Derraz</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">17 August 2004</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">System and network administration</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">System administration</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">2 years</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+34623157502</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+34 623157502</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">younesderraz123@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Barcelona, Spain</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Not available</span></h6></div>
