--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="docs/cv.pdf" class="btn btn-outline-primary d-none d-lg-block">Download CV</a>
+            <a href="docs/cv.pdf" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Download CV</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -125,7 +125,7 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Barcelona, Spain</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Not available</span></h6></div>
                     </div>
-                    <a href="mailto:younesderraz123@gmail.com" class="btn btn-outline-primary mr-4">Mail Me</a>
+                    <a href="mailto:younesderraz123@gmail.com" target="_blank" class="btn btn-outline-primary mr-4">Mail Me</a>
                 </div>
             </div>
         </div>
@@ -273,7 +273,7 @@
                         <h4 class="font-weight-bold m-0">Project Lex</h4>
                     </div>
                     <p>This was a 3 weeks project with two other collegues to create a responsive webpage that contains basic school tools, we used <b>HTML</b>, <b>CSS</b> and <b>JS</b></p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt1-ElHarrakSoulaimane-SendraAlfredo-DerrazYounes-asixc1A/">Visit it</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt1-ElHarrakSoulaimane-SendraAlfredo-DerrazYounes-asixc1A/" target="_blank">Visit it</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -281,7 +281,7 @@
                         <h4 class="font-weight-bold m-0">Delicias Kitchen</h4>
                     </div>
                     <p>In this project we learned to use XML forms, in addition with HTML and CSS. This was one of my initial projects</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt3_ElHarrak_Soulaimane_Derraz_Younes/">Visit it</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://soul4im4ne-elh4rr4k.github.io/pt3_ElHarrak_Soulaimane_Derraz_Younes/" target="_blank">Visit it</a>
                 </div>
                 <!--
                 <div class="col-lg-4 col-md-6 text-center mb-5">
@@ -549,10 +549,10 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://x.com/y0n6s_d3rr4z"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://x.com/y0n6s_d3rr4z" target="_blank"><i class="fab fa-twitter"></i></a>
                 <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                <a class="btn btn-light btn-social mr-2" href="https://linkedin.com/in/younes-derraz"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="https://instagram.com/yns.drrz"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://linkedin.com/in/younes-derraz" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social" href="https://instagram.com/yns.drrz" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <!--
             <div class="d-flex justify-content-center mb-3">
