--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Barcelona, Spain</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Not available</span></h6></div>
                     </div>
-                    <a href="mailto:younesderraz123@gmail.com" target="_blank" class="btn btn-outline-primary mr-4">Mail Me</a>
+                    <a href="mailto:younesderraz123@gmail.com" class="btn btn-outline-primary mr-4">Mail Me</a>
                 </div>
             </div>
         </div>
